Update squid to version 4.13 / rev 88 via SR 846311
https://build.opensuse.org/request/show/846311
by user adamm + dimstar_suse
- re-add older SLES12 requirements so we can use one devel project
  for all codestreams

- fix previous change to reinstante permissions macros, because the wrong path
  has been used (bsc#1171569).
- use libexecdir instead of libdir to conform to recent changes in Factory
  (bsc#1171164).

--- a/packages/s/squid/squid.service
+++ b/packages/s/squid/squid.service
@@ -5,7 +5,7 @@ After=network.target named.service nss-lookup.service
 
 [Service]
 Type=forking
-ExecStartPre=%{_libdir}/squid/initialize_cache_if_needed.sh
+ExecStartPre=%{_libexecdir}/squid/initialize_cache_if_needed.sh
 ExecStart=/usr/sbin/squid -FC
 ExecReload=/usr/bin/kill -HUP $MAINPID
 LimitNOFILE=4096
