Update opensm to version 3.3.23 / rev 15 via SR 845969
https://build.opensuse.org/request/show/845969
by user NMoreyChaisemartin + dimstar_suse

--- a/packages/o/opensm/opensm.service
+++ b/packages/o/opensm/opensm.service
@@ -7,7 +7,7 @@ After=rdma-hw.target
 
 [Service]
 Type=forking
-ExecStart=/usr/lib/opensm-launch
+ExecStart=@LIBEXEC@/opensm-launch
 
 [Install]
 WantedBy=network.target
