Update perl-DBI to version 1.643 / rev 50 via SR 845984
https://build.opensuse.org/request/show/845984
by user dstoecker + dimstar_suse

--- a/packages/p/perl-DBI/cpanspec.yml
+++ b/packages/p/perl-DBI/cpanspec.yml
@@ -3,9 +3,8 @@
 #no_testing: broken upstream
 sources:
  - perl-DBI.rpmlintrc
-#patches:
-#  foo.patch: -p1
-#  bar.patch:
+patches:
+  perl-DBI-CVE-2014-10402.patch: -p1
 #preamble: |-
 # BuildRequires:  gcc-c++
 #post_prep: |-
