--- a/packages/r/rpmlint/config
+++ b/packages/r/rpmlint/config
@@ -935,7 +935,11 @@ setOption("PAMModules.WhiteList", (
     # pam (bsc#1171563)
     "pam_setquota.so",
     # kanidm (bsc#1173387)
-    "pam_kanidm.so"
+    "pam_kanidm.so",
+    # GNOME malcontent parental control (bsc#1177974)
+    "pam_malcontent.so",
+    # pam (bsc#1171562)
+    "pam_faillock.so",
 ))
 
 # Output filters
