--- a/packages/p/perl-DBD-CSV/cpanspec.yml
+++ b/packages/p/perl-DBD-CSV/cpanspec.yml
@@ -9,9 +9,8 @@
 #  bar.patch:
 #preamble: |-
 # BuildRequires:  gcc-c++
-#post_prep: |-
-# hunspell=`pkg-config --libs hunspell | sed -e 's,-l,,; s,  *,,g'`
-# sed -i -e "s,hunspell-X,$hunspell," t/00-prereq.t Makefile.PL 
+post_prep: |-
+  sed -i s/example/examples/ t/11_dsnlist.t
 #post_install: |-
 # sed on %{name}.files
 #license: SUSE-NonFree
