--- a/packages/libv/libvirt-dbus/system-user-libvirt-dbus.conf
+++ b/packages/libv/libvirt-dbus/system-user-libvirt-dbus.conf
@@ -1,3 +1,3 @@
 # Type Name ID GECOS [HOME]
-u libvirtdbus "Libvirt D-Bus bridge"
-g libvirtdbus
+u libvirtdbus - "Libvirt D-Bus bridge"
+g libvirtdbus -
