Update 000package-groups to rev 139 via SR 847066
https://build.opensuse.org/request/show/847066
by user dimstar + dimstar_suse
Add the new pattern yast2_server to the DVD

--- a/packages/0/000package-groups/groups.yml
+++ b/packages/0/000package-groups/groups.yml
@@ -96,6 +96,7 @@ dvd:
   - patterns-xfce-xfce_office: [suggested]
   - patterns-yast-yast2_basis: [suggested]
   - patterns-yast-yast2_install_wf: [suggested]
+  - patterns-yast-yast2_server: [suggested]
   - arabic-fonts
   - arphic-uming-fonts
   - cracklib-dict-full
