Update perl-Mojo-IOLoop-ReadWriteProcess to version 0.28 / rev 12 via SR 848419
https://build.opensuse.org/request/show/848419
by user dstoecker + dimstar_suse

--- a/packages/p/perl-Mojo-IOLoop-ReadWriteProcess/cpanspec.yml
+++ b/packages/p/perl-Mojo-IOLoop-ReadWriteProcess/cpanspec.yml
@@ -23,6 +23,9 @@
 #skip_noarch: 1
 #custom_build: |-
 #./Build build flags=%{?_smp_mflags} --myflag
-#custom_test: |-
-#startserver && make test
+custom_test: |-
+ echo "ignoring unstable tests"
+ echo "https://github.com/mudler/Mojo-IOLoop-ReadWriteProcess/issues/14"
+ rm t/{07_autodetect,12_mocked_container,04_queues,05_serialize}.t
+ ./Build test
 #ignore_requires: Bizarre::Module
