--- a/packages/p/perl-Inline-Python/cpanspec.yml
+++ b/packages/p/perl-Inline-Python/cpanspec.yml
@@ -8,15 +8,19 @@
 #  foo.patch: -p1
 #  bar.patch:
 preamble: |-
- BuildRequires:  python-devel
+ BuildRequires:  python3-devel
 #post_prep: |-
 # hunspell=`pkg-config --libs hunspell | sed -e 's,-l,,; s,  *,,g'`
-# sed -i -e "s,hunspell-X,$hunspell," t/00-prereq.t Makefile.PL 
+# sed -i -e "s,hunspell-X,$hunspell," t/00-prereq.t Makefile.PL
 #post_install: |-
 # sed on %{name}.files
 #license: SUSE-NonFree
 #skip_noarch: 1
-#custom_build: |-
+custom_build: |-
+  export INLINE_PYTHON_EXECUTABLE=/usr/bin/python3
+  perl Makefile.PL INSTALLDIRS=vendor OPTIMIZE="%{optflags}"
+  make %{?_smp_mflags}
+
 #./Build build flags=%{?_smp_mflags} --myflag
 #custom_test: |-
 #startserver && make test
