Update gnome-shell-extensions to version 3.38.1 / rev 104 via SR 847225
https://build.opensuse.org/request/show/847225
by user dimstar + dimstar_suse
Push GNOME 3.38

--- a/packages/g/gnome-shell-extensions/sle-classic.desktop
+++ b/packages/g/gnome-shell-extensions/sle-classic.desktop
@@ -135,7 +135,7 @@ Comment[vi]=Phiên làm việc này đăng nhập bạn vào SLE Cổ điển
 Comment[zh_CN]=该会话将登录到“SLE 经典模式”
 Comment[zh_HK]=這個作業階段讓你登入 SLE Classic
 Comment[zh_TW]=這個作業階段讓您登入 SLE Classic
-Exec=env GNOME_SHELL_SESSION_MODE=sle-classic gnome-session --session gnome-classic
+Exec=env GNOME_SHELL_SESSION_MODE=sle-classic gnome-session
 TryExec=gnome-session
 Icon=
 Type=Application
