Update dehydrated to version 0.6.5 / rev 19 via SR 849382
https://build.opensuse.org/request/show/849382
by user dmolkentin + dimstar_suse
- dehydrated-apache2: Check for mod_compat (bsc#1178927)

--- a/packages/d/dehydrated/acme-challenge.conf.apache.in
+++ b/packages/d/dehydrated/acme-challenge.conf.apache.in
@@ -4,4 +4,14 @@ Alias /.well-known/acme-challenge @CHALLENGEDIR@
    AllowOverride None
    Require all granted
    ForceType text/plain
+
+<IfModule !mod_access_compat.c>
+   Require all granted
+</IfModule>
+
+<IfModule mod_access_compat.c>
+   Order allow,deny
+   Allow from all
+</IfModule>
+
 </Directory>
