Update gcc7 to version 7.5.0+r278197 / rev 30 via SR 849362
https://build.opensuse.org/request/show/849362
by user rguenther + dimstar_suse
- Add gcc7-aarch64-moutline-atomics.patch to backport the aarch64
  -moutline-atomics feature and accumulated fixes but not its
  default enabling.  [jsc#SLE-12209]
- Order gcc7-pr92692.patch after gcc7-aarch64-moutline-atomics.patch
  and refresh.

- Revert gcc7-pr97774.patch as it causes gdb to crash.

- Fix 32bit libgnat.so link.  [bsc#1178675]
- Quote %{cross_arch} consistently when comparing expansion
  against string in RPM %if condition.

- Add gcc7-pr97535.patch to fix memcpy miscompilation on aarch64.
  [bsc#1178624, bsc#1178577]

- Add gcc7-pr97774.patch to fix debug line info for try/catch.
  [bsc#1178614]

--- a/packages/g/gcc7/gcc.spec.in
+++ b/packages/g/gcc7/gcc.spec.in
@@ -315,11 +315,14 @@ Patch24:	gcc48-bsc1161913.patch
 Patch25:	gcc7-pr93965.patch
 Patch26:	gcc7-pr93888.patch
 Patch27:	gcc7-pr94148.patch
+Patch29:	gcc7-pr97535.patch
 # A set of patches from the RH srpm
 Patch51:	gcc41-ppc32-retaddr.patch
 # Some patches taken from Debian
 Patch60:	gcc44-textdomain.patch
 Patch61:	gcc44-rename-info-files.patch
+# Feature backports
+Patch100:	gcc7-aarch64-moutline-atomics.patch
 
 
 # GCC-TESTSUITE-DELETE-BEGIN
@@ -1075,14 +1078,16 @@ ln -s nvptx-newlib/newlib .
 %patch20
 %patch21 -p1
 %patch22 -p1
-%patch23 -p1
 %patch24 -p1
 %patch25 -p1
 %patch26 -p1
 %patch27 -p1
+%patch29
 %patch51
 %patch60
 %patch61
+%patch100 -p1
+%patch23 -p1
 
 #test patching end
 
@@ -1618,7 +1623,7 @@ chmod a+x $RPM_BUILD_ROOT%{_libdir}/libgna*-*.so
 %if %{biarch}
 mv $RPM_BUILD_ROOT%{versmainlibdirbi}/adalib/lib*-*.so $RPM_BUILD_ROOT%{mainlibdirbi}/
 ln -sf %{mainlibdirbi}/libgnarl%{binsuffix}.so $RPM_BUILD_ROOT%{versmainlibdirbi}/adalib/libgnarl.so
-ln -sf %{mainlibdirbi}/libgnat%{binsuffix}.so $RPM_BUILD_ROOT%{versmainlibdirbi}/adalib/libgnarl.so
+ln -sf %{mainlibdirbi}/libgnat%{binsuffix}.so $RPM_BUILD_ROOT%{versmainlibdirbi}/adalib/libgnat.so
 chmod a+x $RPM_BUILD_ROOT%{mainlibdirbi}/libgna*-*.so
 %endif
 %endif
