Update kernel-firmware to version 20201120 / rev 155 via SR 850223
https://build.opensuse.org/request/show/850223
by user tiwai + dimstar_suse

--- a/packages/k/kernel-firmware/kernel-firmware.spec.in
+++ b/packages/k/kernel-firmware/kernel-firmware.spec.in
@@ -18,6 +18,10 @@
 
 %global flavor @BUILD_FLAVOR@%{nil}
 
+%if 0%{?suse_version} < 1550
+%define _firmwaredir /lib/firmware
+%endif
+
 %define __ksyms_path ^%{_firmwaredir}
 %define version_unconverted @@VERSION@@
 
