Update rubygem-rubocop to version 1.4.2 / rev 19 via SR 851250
https://build.opensuse.org/request/show/851250
by user dancermak + dimstar_suse

--- a/gem2rpm.yml
+++ b/gem2rpm.yml
@@ -19,8 +19,8 @@
 #   BuildRequires: foobar
 #   Requires: foobar
 # ## used by gem2rpm
-:patches:
-  0001-Use-usr-bin-bash-instead-of-env-as-the-shebang.patch: -p1
+# :patches:
+#   0001-Use-usr-bin-bash-instead-of-env-as-the-shebang.patch: -p1
 # ## used by gem2rpm
 :sources:
 # - foo.desktop
