Update kernel-source to version 5.9.11 / rev 565 via SR 850892
https://build.opensuse.org/request/show/850892
by user jirislaby + dimstar_suse
5.9.11 (incl. s390 BS crashes) & AMIGA_PARTITION enabled

--- a/packages/k/kernel-source/kernel-binary.spec.in
+++ b/packages/k/kernel-source/kernel-binary.spec.in
@@ -614,8 +614,8 @@ done
 # keep this -suffix list in sync with post.sh and postun.sh
 suffix=-%build_flavor
 %endif
-ln -s X$image$suffix %buildroot/boot/$image$suffix
-ln -s Xinitrd$suffix %buildroot/boot/initrd$suffix
+ln -s XX$image$suffix %buildroot/boot/$image$suffix
+ln -s XXinitrd$suffix %buildroot/boot/initrd$suffix
 
 cp -p .config %buildroot/boot/config-%kernelrelease-%build_flavor
 sysctl_file=%buildroot/boot/sysctl.conf-%kernelrelease-%build_flavor
@@ -649,7 +649,7 @@ chmod 0600 %buildroot/boot/initrd-%kernelrelease-%build_flavor{,-kdump}
 if [ %CONFIG_MODULES = y ]; then
     mkdir -p %rpm_install_dir/%cpu_arch_flavor
     mkdir -p %buildroot/usr/src/linux-obj/%cpu_arch
-    ln -s X%build_flavor %buildroot/usr/src/linux-obj/%cpu_arch_flavor
+    ln -s XX%build_flavor %buildroot/usr/src/linux-obj/%cpu_arch_flavor
     install -m 755 -D -t %rpm_install_dir/%cpu_arch_flavor/scripts/mod/ scripts/mod/ksym-provides
 
     gzip -n -c9 < Module.symvers > %buildroot/boot/symvers-%kernelrelease-%build_flavor.gz
