--- a/packages/k/kernel-source/kernel-source.spec.in
+++ b/packages/k/kernel-source/kernel-source.spec.in
@@ -224,7 +224,7 @@ cd ..
 %endif
 
 %if ! %vanilla_only
-ln -sf . linux%variant # dummy symlink
+ln -sf XXlinux%variant linux%variant # dummy symlink
 
 cd linux-%kernelrelease%variant
 %_sourcedir/apply-patches %_sourcedir/series.conf %my_builddir %symbols
