Update perl-Cairo to version 1.108 / rev 40 via SR 852330
https://build.opensuse.org/request/show/852330
by user dstoecker + dimstar_suse

--- a/packages/p/perl-Cairo/cpanspec.yml
+++ b/packages/p/perl-Cairo/cpanspec.yml
@@ -21,3 +21,4 @@ license: LGPL-2.1-or-later
 #custom_test: |-
 #startserver && make test
 #ignore_requires: Bizarre::Module
+skip_doc: ^(cairo-perl.typemap|doctypes|perl-cairo.doap)$
