Update kernel-source to version 5.9.12 / rev 566 via SR 852571
https://build.opensuse.org/request/show/852571
by user jirislaby + dimstar_suse
5.9.12 & another rpm 4.16 fix & rpi4 support & soundwire cleanup

--- a/packages/k/kernel-source/kernel-binary.spec.in
+++ b/packages/k/kernel-source/kernel-binary.spec.in
@@ -40,7 +40,7 @@
 %define rpm_install_dir %buildroot%obj_install_dir
 %define kernel_build_dir %my_builddir/linux-%srcversion/linux-obj
 
-%if 0%{?_project:1} && ( %(echo %_project | egrep -x -f %_sourcedir/release-projects | grep -v ^PTF | grep -vc openSUSE) || %(echo %_project | grep -Ec "^(Devel:)?Kernel:") )
+%if 0%{?_project:1} && ( %(echo %_project | grep -Ex -f %_sourcedir/release-projects | grep -v ^PTF | grep -vc openSUSE) || %(echo %_project | grep -Ec "^(Devel:)?Kernel:") )
 	%define klp_symbols 1
 %endif
 
@@ -309,7 +309,7 @@ fi
 
 CONFIG_SUSE_KERNEL_RELEASED="--disable CONFIG_SUSE_KERNEL_RELEASED"
 %if 0%{?_project:1}
-if echo %_project | egrep -qx -f %_sourcedir/release-projects; then
+if echo %_project | grep -Eqx -f %_sourcedir/release-projects; then
 	CONFIG_SUSE_KERNEL_RELEASED="--enable CONFIG_SUSE_KERNEL_RELEASED"
 fi
 %endif
@@ -614,8 +614,6 @@ done
 # keep this -suffix list in sync with post.sh and postun.sh
 suffix=-%build_flavor
 %endif
-ln -s XX$image$suffix %buildroot/boot/$image$suffix
-ln -s XXinitrd$suffix %buildroot/boot/initrd$suffix
 
 cp -p .config %buildroot/boot/config-%kernelrelease-%build_flavor
 sysctl_file=%buildroot/boot/sysctl.conf-%kernelrelease-%build_flavor
@@ -649,7 +647,6 @@ chmod 0600 %buildroot/boot/initrd-%kernelrelease-%build_flavor{,-kdump}
 if [ %CONFIG_MODULES = y ]; then
     mkdir -p %rpm_install_dir/%cpu_arch_flavor
     mkdir -p %buildroot/usr/src/linux-obj/%cpu_arch
-    ln -s XX%build_flavor %buildroot/usr/src/linux-obj/%cpu_arch_flavor
     install -m 755 -D -t %rpm_install_dir/%cpu_arch_flavor/scripts/mod/ scripts/mod/ksym-provides
 
     gzip -n -c9 < Module.symvers > %buildroot/boot/symvers-%kernelrelease-%build_flavor.gz
