--- a/packages/k/kernel-source/supported.conf
+++ b/packages/k/kernel-source/supported.conf
@@ -2577,6 +2577,7 @@
 		drivers/ptp/ptp_kvm
 		drivers/ptp/ptp_qoriq
 		drivers/pwm/pwm-bcm2835
+		drivers/pwm/pwm-raspberrypi-poe
 -		drivers/pwm/*
 -		drivers/rapidio/*
 -		drivers/regulator/88pg86x
