Update fetchmsttfonts to version 11.4 / rev 16 via SR 853286
https://build.opensuse.org/request/show/853286
by user msmeissn + dimstar_suse

--- a/packages/f/fetchmsttfonts/fetchmsttfonts.sh.in
+++ b/packages/f/fetchmsttfonts/fetchmsttfonts.sh.in
@@ -47,13 +47,11 @@ for archive in $FONTS; do
         continue
     fi
 
-    for algo in md5 sha1 sha512; do
-        if ! grep "$file" "__DOCDIR__/__NAME__/corefonts.$algo" | ${algo}sum --check --quiet --status > /dev/null 2>&1; then
-            rm -f "$file"
-            echo "$algo checksum mismatch for $file ... deleted!"
-            continue
-        fi
-    done
+    if ! grep "$file" "/usr/share/__NAME__/corefonts.sha512" | sha512sum --check --quiet --status > /dev/null 2>&1; then
+        rm -f "$file"
+        echo "checksum mismatch for $file ... deleted!"
+        continue
+    fi
 
     echo "done"
     echo -n "  Extracting ... "
