Update gcc10 to version 10.2.1+git1030 / rev 10 via SR 852655
https://build.opensuse.org/request/show/852655
by user rguenther + dimstar_suse
- Update to gcc-10 branch head (e563687cf9d3d1278f45aaebd), git1030
  * Includes fix for firefox build [gcc#97918]

- Do not specify alternate offload compiler location at
  configure time.
- Update README.First-for.SuSE.packagers
- Install offload compilers for gcc10-testresults build

- Enable fortran for offload compilers.

--- a/packages/g/gcc10/cross.spec.in
+++ b/packages/g/gcc10/cross.spec.in
@@ -22,7 +22,7 @@ ExclusiveArch: do-not-build
 %define build_libjava 0
 %define build_java 0
 
-%define build_fortran 0
+%define build_fortran 0%{?gcc_accel:1}
 %define build_objc 0
 %define build_objcp 0
 %define build_go 0
