--- a/packages/g/gcc10/gcc.spec.in
+++ b/packages/g/gcc10/gcc.spec.in
@@ -227,6 +227,14 @@ BuildRequires: libunwind-devel
 BuildRequires: dejagnu
 BuildRequires: expect
 BuildRequires: gdb
+%if %{build_nvptx}
+BuildRequires: cross-nvptx-gcc@base_ver@
+BuildRequires: cross-nvptx-newlib@base_ver@-devel
+%endif
+%if %{build_gcn}
+BuildRequires: cross-amdgcn-gcc@base_ver@
+BuildRequires: cross-amdgcn-newlib@base_ver@-devel
+%endif
 %endif
 #!BuildIgnore: gcc-PIE
 
@@ -263,7 +271,7 @@ BuildRequires: gdb
 %define biarch_targets x86_64 s390x powerpc64 powerpc sparc sparc64
 
 URL:          https://gcc.gnu.org/
-Version: 10.2.1+git958
+Version: 10.2.1+git1030
 Release:      1
 %define gcc_dir_version %(echo %version |  sed 's/+.*//' | cut -d '.' -f 1)
 %define gcc_snapshot_revision %(echo %version | sed 's/[3-9]\.[0-9]\.[0-6]//' | sed 's/+/-/')
@@ -1194,10 +1202,10 @@ TCFLAGS="$RPM_OPT_FLAGS" \
 %if %{build_nvptx} || %{build_gcn}
 	--enable-offload-targets=\
 %if %{build_nvptx}
-nvptx-none=%{_prefix}/nvptx-none,\
+nvptx-none,\
 %endif
 %if %{build_gcn}
-amdgcn-amdhsa=%{_prefix}/amdgcn-amdhsa,\
+amdgcn-amdhsa,\
 %endif
 %endif
 %if %{build_nvptx}
