Update apache2 to version 2.4.46 / rev 175 via SR 853601
https://build.opensuse.org/request/show/853601
by user pgajdos + dimstar_suse
- apache2 main package recommends apache2-utils

- break some long lines in the spec as requested by review team

- maybe make spec acceptable for factory bot
- modified sources
  % _multibuild

- buildrequire netcfg for tests

- remove Requires(post): firewalld hard dependency (this is already
  handled by the %firewalld_reload macro)

- package reworked trough [bsc#1178478]
- modified patches
  % apache2-mod_proxy_uwsgi-fix-crash.patch (refreshed)
- modified sources
  % apache2-loadmodule.conf
  % apache2-manual.conf
  % apache2-script-helpers
  % apache2@.service
  % sysconfig.apache2
- deleted patches
  - deprecated-scripts-arch.patch (not needed)
  - httpd-2.0.54-envvars.dif (not needed)
  - httpd-2.1.3alpha-layout.dif
    (renamed to apache2-system-dirs-layout.patch)
  - httpd-2.2.0-a

--- a/packages/a/apache2/apache2-manual.conf
+++ b/packages/a/apache2/apache2-manual.conf
@@ -10,11 +10,12 @@ AliasMatch ^/manual(?:/(?:de|en|es|fr|ja|ko|ru))?(/.*)?$ "/usr/share/apache2/man
     Options Indexes
     AllowOverride None
     <IfModule !mod_access_compat.c>
-        Require all granted
+        Require local
     </IfModule>
     <IfModule mod_access_compat.c>
-        Order allow,deny
-        Allow from all
+        Order deny,allow
+        Deny from all
+        Allow from localhost 127.0.0.1
     </IfModule>
 
     <Files *.html>
