Update bind to version 9.16.8 / rev 159 via SR 853298
https://build.opensuse.org/request/show/853298
by user msmeissn + dimstar_suse

--- a/packages/b/bind/bind-chrootenv.conf
+++ b/packages/b/bind/bind-chrootenv.conf
@@ -14,3 +14,4 @@ L /var/lib/named/var/lib/named - - - - ../..
 L /var/lib/named/var/log - - - - ../log
 d /var/lib/named/var/run - - - - -
 d /var/lib/named/var/run/named 755 named named - -
+C /var/lib/named/usr/lib64/named - - - - /usr/lib64/named
