Update loki to version 2.0.0+git.1603727260.6978ee5d / rev 2 via SR 854273
https://build.opensuse.org/request/show/854273
by user STorresi + dimstar_suse

--- a/packages/l/loki/loki.service
+++ b/packages/l/loki/loki.service
@@ -6,7 +6,7 @@ Documentation=https://github.com/grafana/loki
 Restart=always
 User=loki
 EnvironmentFile=-/etc/sysconfig/loki
-ExecStart=/usr/bin/loki -config.file=$CONFIG_FILE
+ExecStart=/usr/bin/loki -config.file=${CONFIG_FILE}
 ExecReload=/bin/kill -HUP $MAINPID
 TimeoutStopSec=20s
 SendSIGKILL=no
