Update rubygem-passenger to version 6.0.7 / rev 9 via SR 854714
https://build.opensuse.org/request/show/854714
by user mschnitzer + dimstar_suse

--- a/packages/r/rubygem-passenger/gem2rpm.yml
+++ b/packages/r/rubygem-passenger/gem2rpm.yml
@@ -54,10 +54,6 @@
 ---
 :license: MIT and GPL-2.0
 :preamble: |-
-  %define apxs /usr/sbin/apxs2
-  %define apache_libexecdir %(%{apxs} -q LIBEXECDIR)
-  %define apache_sysconfdir %(%{apxs} -q SYSCONFDIR)
-  %define apache_mmn        %(MMN=$(%{apxs} -q LIBEXECDIR)_MMN; test -x $MMN && $MMN)
   %if 0%{?suse_version} > 1220
   %bcond_without systemd
   %define passenger_tempdir /run/passenger
@@ -81,6 +77,8 @@
   #BuildRequires:  libev-devel
   %endif
   BuildRequires:  %{rubygem rake}
+  BuildRequires:  apache-rpm-macros
+  BuildRequires:  apache2-utils
   # TODO: move to subpackage
   Recommends:     packageand(apache2:rubygem-passenger-apache2)
   Recommends:     packageand(nginx:rubygem-passenger-nginx)
