Update perl-DBD-CSV to version 0.56 / rev 37 via SR 854822
https://build.opensuse.org/request/show/854822
by user coolo + dimstar_suse

--- a/packages/p/perl-DBD-CSV/cpanspec.yml
+++ b/packages/p/perl-DBD-CSV/cpanspec.yml
@@ -9,8 +9,8 @@
 #  bar.patch:
 #preamble: |-
 # BuildRequires:  gcc-c++
-post_prep: |-
-  sed -i s/example/examples/ t/11_dsnlist.t
+#post_prep: |-
+#  sed -i s/example/examples/ t/11_dsnlist.t
 #post_install: |-
 # sed on %{name}.files
 #license: SUSE-NonFree
