Update apache2 to version 2.4.46 / rev 177 via SR 854976
https://build.opensuse.org/request/show/854976
by user pgajdos + dimstar_suse
- added https://httpd.apache.org/server-status like server status
  (configured by APACHE_EXTENDED_STATUS="lua")
- modified sources
  % apache2-mod_status.conf
  % apache2-start_apache2
  % sysconfig.apache2

- actually install suse provided READMEs
- install upstream configuration example
- added sources
  + apache2-README-configuration.txt

- apxs -q PREFIX now returns /srv/www again

--- a/packages/a/apache2/apache2-mod_status.conf
+++ b/packages/a/apache2/apache2-mod_status.conf
@@ -5,16 +5,28 @@
 # see https://httpd.apache.org/docs/2.4/mod/mod_status.html
 #
 <IfModule mod_status.c>
-	<Location /server-status>
-		SetHandler server-status
-		<IfModule !mod_access_compat.c>
-			Require local
-		</IfModule>
-		<IfModule mod_access_compat.c>
-			Order deny,allow
-			Deny from all
-			Allow from localhost
-		</IfModule>
-	</Location>
+    <IfModule mod_lua.c>
+        <IfDefine LUA_STATUS>
+            AddHandler lua-script .lua
+            LuaMapHandler ^/server-status/?$ /usr/share/apache2/lua-server-status/server-status.lua
+        </IfDefine>
+    </IfModule>
+    <IfDefine !LUA_STATUS>
+        <IfDefine EXTENDED_STATUS>
+            ExtendedStatus on
+        </IfDefine>
+        <Location /server-status>
+            SetHandler server-status
+        </Location>
+    </IfDefine>
+    <Location /server-status>
+        <IfModule !mod_access_compat.c>
+            Require local
+        </IfModule>
+        <IfModule mod_access_compat.c>
+            Order deny,allow
+            Deny from all
+            Allow from localhost
+         </IfModule>
+    </Location>
 </IfModule>
-
