--- a/packages/k/kernel-source/series.conf
+++ b/packages/k/kernel-source/series.conf
@@ -2085,6 +2085,131 @@
 	patches.kernel.org/5.9.12-151-x86-resctrl-Add-necessary-kernfs_put-calls-to-.patch
 	patches.kernel.org/5.9.12-152-drm-amdgpu-add-rlc-iram-and-dram-firmware-supp.patch
 	patches.kernel.org/5.9.12-153-Linux-5.9.12.patch
+	patches.kernel.org/5.9.13-001-devlink-Hold-rtnl-lock-while-reading-netdev-at.patch
+	patches.kernel.org/5.9.13-002-devlink-Make-sure-devlink-instance-and-port-ar.patch
+	patches.kernel.org/5.9.13-003-ipv6-addrlabel-fix-possible-memory-leak-in-ip6.patch
+	patches.kernel.org/5.9.13-004-net-af_iucv-set-correct-sk_protocol-for-child-.patch
+	patches.kernel.org/5.9.13-005-net-openvswitch-fix-TTL-decrement-action-netli.patch
+	patches.kernel.org/5.9.13-006-net-tls-missing-received-data-after-fast-remot.patch
+	patches.kernel.org/5.9.13-007-net-tls-Protect-from-calling-tls_dev_del-for-T.patch
+	patches.kernel.org/5.9.13-008-rose-Fix-Null-pointer-dereference-in-rose_send.patch
+	patches.kernel.org/5.9.13-009-sock-set-sk_err-to-ee_errno-on-dequeue-from-er.patch
+	patches.kernel.org/5.9.13-010-tcp-Set-INET_ECN_xmit-configuration-in-tcp_rei.patch
+	patches.kernel.org/5.9.13-011-tun-honor-IOCB_NOWAIT-flag.patch
+	patches.kernel.org/5.9.13-012-usbnet-ipheth-fix-connectivity-with-iOS-14.patch
+	patches.kernel.org/5.9.13-013-vsock-virtio-discard-packets-only-when-socket-.patch
+	patches.kernel.org/5.9.13-014-mptcp-fix-NULL-ptr-dereference-on-bad-MPJ.patch
+	patches.kernel.org/5.9.13-015-net-packet-fix-packet-receive-on-L3-devices-wi.patch
+	patches.kernel.org/5.9.13-016-netfilter-bridge-reset-skb-pkt_type-after-NF_I.patch
+	patches.kernel.org/5.9.13-017-ipv4-Fix-tos-mask-in-inet_rtm_getroute.patch
+	patches.kernel.org/5.9.13-018-dt-bindings-net-correct-interrupt-flags-in-exa.patch
+	patches.kernel.org/5.9.13-019-chelsio-chtls-fix-panic-during-unload-reload-c.patch
+	patches.kernel.org/5.9.13-020-ibmvnic-Ensure-that-SCRQ-entry-reads-are-corre.patch
+	patches.kernel.org/5.9.13-021-ibmvnic-Fix-TX-completion-error-handling.patch
+	patches.kernel.org/5.9.13-022-tipc-fix-incompatible-mtu-of-transmission.patch
+	patches.kernel.org/5.9.13-023-inet_ecn-Fix-endianness-of-checksum-update-whe.patch
+	patches.kernel.org/5.9.13-024-geneve-pull-IP-header-before-ECN-decapsulation.patch
+	patches.kernel.org/5.9.13-025-net-ip6_gre-set-dev-hard_header_len-when-using.patch
+	patches.kernel.org/5.9.13-026-dpaa_eth-copy-timestamp-fields-to-new-skb-in-A.patch
+	patches.kernel.org/5.9.13-027-net-x25-prevent-a-couple-of-overflows.patch
+	patches.kernel.org/5.9.13-028-cxgb3-fix-error-return-code-in-t3_sge_alloc_qs.patch
+	patches.kernel.org/5.9.13-029-net-pasemi-fix-error-return-code-in-pasemi_mac.patch
+	patches.kernel.org/5.9.13-030-vxlan-fix-error-return-code-in-__vxlan_dev_cre.patch
+	patches.kernel.org/5.9.13-031-chelsio-chtls-fix-a-double-free-in-chtls_setke.patch
+	patches.kernel.org/5.9.13-032-net-mvpp2-Fix-error-return-code-in-mvpp2_open.patch
+	patches.kernel.org/5.9.13-033-net-skbuff-ensure-LSE-is-pullable-before-decre.patch
+	patches.kernel.org/5.9.13-034-net-openvswitch-ensure-LSE-is-pullable-before-.patch
+	patches.kernel.org/5.9.13-035-net-sched-act_mpls-ensure-LSE-is-pullable-befo.patch
+	patches.kernel.org/5.9.13-036-net-mlx5-DR-Proper-handling-of-unsupported-Con.patch
+	patches.kernel.org/5.9.13-037-net-mlx5-Fix-wrong-address-reclaim-when-comman.patch
+	patches.kernel.org/5.9.13-038-net-mlx5e-fix-fs_tcp.c-build-when-IPV6-is-not-.patch
+	patches.kernel.org/5.9.13-039-ALSA-usb-audio-US16x08-fix-value-count-for-lev.patch
+	patches.kernel.org/5.9.13-040-Input-xpad-support-Ardwiino-Controllers.patch
+	patches.kernel.org/5.9.13-041-Input-i8042-add-ByteSpeed-touchpad-to-noloop-t.patch
+	patches.kernel.org/5.9.13-042-Input-atmel_mxt_ts-fix-lost-interrupts.patch
+	patches.kernel.org/5.9.13-043-tracing-Fix-alignment-of-static-buffer.patch
+	patches.kernel.org/5.9.13-044-tracing-Remove-WARN_ON-in-start_thread.patch
+	patches.kernel.org/5.9.13-045-uapi-fix-statx-attribute-value-overlap-for-DAX.patch
+	patches.kernel.org/5.9.13-046-drm-i915-gt-Fixup-tgl-mocs-for-PTE-tracking.patch
+	patches.kernel.org/5.9.13-047-Linux-5.9.13.patch
+	patches.kernel.org/5.9.14-001-usb-gadget-f_fs-Use-local-copy-of-descriptors-.patch
+	patches.kernel.org/5.9.14-002-USB-serial-kl5kusb105-fix-memleak-on-open.patch
+	patches.kernel.org/5.9.14-003-USB-serial-ch341-add-new-Product-ID-for-CH341A.patch
+	patches.kernel.org/5.9.14-004-USB-serial-ch341-sort-device-id-entries.patch
+	patches.kernel.org/5.9.14-005-USB-serial-option-add-Fibocom-NL668-variants.patch
+	patches.kernel.org/5.9.14-006-USB-serial-option-add-support-for-Thales-Cinte.patch
+	patches.kernel.org/5.9.14-007-USB-serial-option-fix-Quectel-BG96-matching.patch
+	patches.kernel.org/5.9.14-008-tty-Fix-pgrp-locking-in-tiocspgrp.patch
+	patches.kernel.org/5.9.14-009-tty-Fix-session-locking.patch
+	patches.kernel.org/5.9.14-010-speakup-Reject-setting-the-speakup-line-discip.patch
+	patches.kernel.org/5.9.14-011-ALSA-hda-realtek-Fix-bass-speaker-DAC-assignme.patch
+	patches.kernel.org/5.9.14-012-ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-ano.patch
+	patches.kernel.org/5.9.14-013-ALSA-hda-realtek-Enable-headset-of-ASUS-UX482E.patch
+	patches.kernel.org/5.9.14-014-ALSA-hda-realtek-Add-new-codec-supported-for-A.patch
+	patches.kernel.org/5.9.14-015-ALSA-hda-realtek-Fixed-Dell-AIO-wrong-sound-to.patch
+	patches.kernel.org/5.9.14-016-ALSA-hda-generic-Add-option-to-enforce-preferr.patch
+	patches.kernel.org/5.9.14-017-ring-buffer-Update-write-stamp-with-the-correc.patch
+	patches.kernel.org/5.9.14-018-ring-buffer-Set-the-right-timestamp-in-the-slo.patch
+	patches.kernel.org/5.9.14-019-ring-buffer-Always-check-to-put-back-before-st.patch
+	patches.kernel.org/5.9.14-020-ftrace-Fix-updating-FTRACE_FL_TRAMP.patch
+	patches.kernel.org/5.9.14-021-ftrace-Fix-DYNAMIC_FTRACE_WITH_DIRECT_CALLS-de.patch
+	patches.kernel.org/5.9.14-022-cifs-allow-syscalls-to-be-restarted-in-__smb_s.patch
+	patches.kernel.org/5.9.14-023-cifs-fix-potential-use-after-free-in-cifs_echo.patch
+	patches.kernel.org/5.9.14-024-cifs-refactor-create_sd_buf-and-and-avoid-corr.patch
+	patches.kernel.org/5.9.14-025-cifs-add-NULL-check-for-ses-tcon_ipc.patch
+	patches.kernel.org/5.9.14-026-gfs2-Upgrade-shared-glocks-for-atime-updates.patch
+	patches.kernel.org/5.9.14-027-gfs2-Fix-deadlock-between-gfs2_-create_inode-i.patch
+	patches.kernel.org/5.9.14-028-s390-pci-fix-CPU-address-in-MSI-for-directed-I.patch
+	patches.kernel.org/5.9.14-029-i2c-imx-Fix-reset-of-I2SR_IAL-flag.patch
+	patches.kernel.org/5.9.14-030-i2c-imx-Check-for-I2SR_IAL-after-every-byte.patch
+	patches.kernel.org/5.9.14-031-i2c-imx-Don-t-generate-STOP-condition-if-arbit.patch
+	patches.kernel.org/5.9.14-032-tracing-Fix-userstacktrace-option-for-instance.patch
+	patches.kernel.org/5.9.14-033-thunderbolt-Fix-use-after-free-in-remove_unplu.patch
+	patches.kernel.org/5.9.14-034-drm-omap-sdi-fix-bridge-enable-disable.patch
+	patches.kernel.org/5.9.14-035-drm-amdgpu-vcn3.0-stall-DPG-when-WPTR-RPTR-res.patch
+	patches.kernel.org/5.9.14-036-drm-amdgpu-vcn3.0-remove-old-DPG-workaround.patch
+	patches.kernel.org/5.9.14-037-drm-i915-gt-Retain-default-context-state-acros.patch
+	patches.kernel.org/5.9.14-038-drm-i915-gt-Limit-frequency-drop-to-RPe-on-par.patch
+	patches.kernel.org/5.9.14-039-drm-i915-gt-Program-mocs-63-for-cache-eviction.patch
+	patches.kernel.org/5.9.14-040-KVM-PPC-Book3S-HV-XIVE-Fix-vCPU-id-sanity-chec.patch
+	patches.kernel.org/5.9.14-041-scsi-mpt3sas-Fix-ioctl-timeout.patch
+	patches.kernel.org/5.9.14-042-io_uring-fix-recvmsg-setup-with-compat-buf-sel.patch
+	patches.kernel.org/5.9.14-043-dm-writecache-advance-the-number-of-arguments-.patch
+	patches.kernel.org/5.9.14-044-dm-writecache-fix-the-maximum-number-of-argume.patch
+	patches.kernel.org/5.9.14-045-powerpc-64s-powernv-Fix-memory-corruption-when.patch
+	patches.kernel.org/5.9.14-046-genirq-irqdomain-Add-an-irq_create_mapping_aff.patch
+	patches.kernel.org/5.9.14-047-powerpc-pseries-Pass-MSI-affinity-to-irq_creat.patch
+	patches.kernel.org/5.9.14-048-dm-fix-bug-with-RCU-locking-in-dm_blk_report_z.patch
+	patches.kernel.org/5.9.14-049-dm-fix-double-RCU-unlock-in-dm_dax_zero_page_r.patch
+	patches.kernel.org/5.9.14-050-dm-remove-invalid-sparse-__acquires-and-__rele.patch
+	patches.kernel.org/5.9.14-051-x86-uprobes-Do-not-use-prefixes.nbytes-when-lo.patch
+	patches.kernel.org/5.9.14-052-coredump-fix-core_pattern-parse-error.patch
+	patches.kernel.org/5.9.14-053-mm-list_lru-set-shrinker-map-bit-when-child-nr.patch
+	patches.kernel.org/5.9.14-054-mm-swapfile-do-not-sleep-with-a-spin-lock-held.patch
+	patches.kernel.org/5.9.14-055-hugetlb_cgroup-fix-offline-of-hugetlb-cgroup-w.patch
+	patches.kernel.org/5.9.14-056-Revert-amd-amdgpu-Disable-VCN-DPG-mode-for-Pic.patch
+	patches.kernel.org/5.9.14-057-iommu-amd-Set-DTE-IntTabLen-to-represent-512-I.patch
+	patches.kernel.org/5.9.14-058-mm-memcg-slab-fix-obj_cgroup_charge-return-val.patch
+	patches.kernel.org/5.9.14-059-lib-syscall-fix-syscall-registers-retrieval-on.patch
+	patches.kernel.org/5.9.14-060-can-af_can-can_rx_unregister-remove-WARN-state.patch
+	patches.kernel.org/5.9.14-061-gfs2-check-for-empty-rgrp-tree-in-gfs2_ri_upda.patch
+	patches.kernel.org/5.9.14-062-netfilter-ipset-prevent-uninit-value-in-hash_i.patch
+	patches.kernel.org/5.9.14-063-tipc-fix-a-deadlock-when-flushing-scheduled-wo.patch
+	patches.kernel.org/5.9.14-064-ASoC-wm_adsp-fix-error-return-code-in-wm_adsp_.patch
+	patches.kernel.org/5.9.14-065-gfs2-Fix-deadlock-dumping-resource-group-glock.patch
+	patches.kernel.org/5.9.14-066-gfs2-Don-t-freeze-the-file-system-during-unmou.patch
+	patches.kernel.org/5.9.14-067-rtw88-debug-Fix-uninitialized-memory-in-debugf.patch
+	patches.kernel.org/5.9.14-068-i2c-qcom-Fix-IRQ-error-misassignement.patch
+	patches.kernel.org/5.9.14-069-i2c-qup-Fix-error-return-code-in-qup_i2c_bam_s.patch
+	patches.kernel.org/5.9.14-070-dm-writecache-remove-BUG-and-fail-gracefully-i.patch
+	patches.kernel.org/5.9.14-071-Input-i8042-fix-error-return-code-in-i8042_set.patch
+	patches.kernel.org/5.9.14-072-netfilter-nf_tables-avoid-false-postive-lockde.patch
+	patches.kernel.org/5.9.14-073-netfilter-nftables_offload-set-address-type-in.patch
+	patches.kernel.org/5.9.14-074-netfilter-nftables_offload-build-mask-based-fr.patch
+	patches.kernel.org/5.9.14-075-x86-insn-eval-Use-new-for_each_insn_prefix-mac.patch
+	patches.kernel.org/5.9.14-076-Revert-geneve-pull-IP-header-before-ECN-decaps.patch
+	patches.kernel.org/5.9.14-077-bpf-Fix-propagation-of-32-bit-signed-bounds-fr.patch
+	patches.kernel.org/5.9.14-078-Linux-5.9.14.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
@@ -2108,9 +2233,9 @@
 	# to get into mainline any time soon (or ever) belong
 	# to area specific sections below.
 	########################################################
-	patches.suse/tipc-fix-a-deadlock-when-flushing-scheduled-work.patch
 	patches.suse/arm64-kexec_file-Fix-sparse-warning.patch
 	patches.suse/RDMA-srpt-Fix-typo-in-srpt_unregister_mad_agent-docs.patch
+	patches.suse/drm-i915-gt-Declare-gen9-has-64-mocs-entries.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
