Update bugzilla to version 5.0.6 / rev 6 via SR 855566
https://build.opensuse.org/request/show/855566
by user ecsos + dimstar_suse

--- a/packages/b/bugzilla/bugzilla.conf
+++ b/packages/b/bugzilla/bugzilla.conf
@@ -1,6 +1,6 @@
-Alias /bugzilla "/srv/www/bugzilla/"
+Alias /bugzilla "@APACHE_SERVERROOT@/bugzilla/"
     
-<Directory "/srv/www/bugzilla">
+<Directory "@APACHE_SERVERROOT@/bugzilla">
     
     AddHandler cgi-script .cgi
     Options +ExecCGI +FollowSymLinks
