Update 000package-groups to rev 140
https://build.opensuse.org/package/rdiff/openSUSE:Factory/000package-groups?linkrev=base&rev=140
by user dimstar_suse

--- a/packages/0/000package-groups/groups.yml
+++ b/packages/0/000package-groups/groups.yml
@@ -348,6 +348,8 @@ dvd:
   - Mesa-demo-x
   - inkscape
   - autoyast2
+  # impitool can be handy when machines are configured using autoyast
+  - ipmitool
 
   # Have a bootable system for RPi3/4 - boo#1172574
   - raspberrypi-firmware: [aarch64]  # bsc 1130015
