--- a/packages/n/nextcloud/nextcloud-cron.service
+++ b/packages/n/nextcloud/nextcloud-cron.service
@@ -2,8 +2,8 @@
 Description=Nextcloud CronJob
 
 [Service]
-User=wwwrun
-ExecStart=/usr/bin/php -f /srv/www/htdocs/nextcloud/cron.php
+User=@APACHE_USER@
+ExecStart=/usr/bin/php -f @APACHE_MYSERVERROOT@/nextcloud/cron.php
 
 [Install]
 WantedBy=basic.target
