Update alsa-utils to version 1.2.4 / rev 128 via SR 855588
https://build.opensuse.org/request/show/855588
by user tiwai + dimstar_suse

--- a/packages/a/alsa-utils/sound-extra.service
+++ b/packages/a/alsa-utils/sound-extra.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Load extra kernel modules for sound stuff
-After=alsasound.service
+After=alsa-restore.service
 ConditionPathExists=/proc/asound
 
 [Service]
