--- a/packages/c/cld2/cld2.pc.in
+++ b/packages/c/cld2/cld2.pc.in
@@ -1,11 +1,11 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=@CMAKE_INSTALL_LIBDIR@
-includedir=${prefix}/include/cld2
+includedir=${prefix}/include
 
 Name: cld2
 Description: Compact Language Detector 2
 URL: https://github.com/CLD2Owners/cld2
 Version: 2
 Libs: -L${libdir} -lcld2_full
-Cflags: -I${includedir} -I${includedir}/internal -I${includedir}/public
+Cflags: -I${includedir}
