Update perl-App-CLI to version 0.52 / rev 30 via SR 856664
https://build.opensuse.org/request/show/856664
by user dstoecker + dimstar_suse

--- a/packages/p/perl-App-CLI/cpanspec.yml
+++ b/packages/p/perl-App-CLI/cpanspec.yml
@@ -25,4 +25,4 @@
 #./Build build flags=%{?_smp_mflags} --myflag
 #custom_test: |-
 #startserver && make test
-#ignore_requires: Bizarre::Module
+ignore_requires: Test::Kwalitee
